Upload to unstable
svn path=/glibc-package/trunk/; revision=5616

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-4) UNRELEASED; urgency=low
+eglibc (2.17-4) unstable; urgency=low
 
   [ Adam Conrad ]
   * Drop versioned build-dependencies on tar, make, and sed, as they're
@@ -23,7 +23,7 @@ eglibc (2.17-4) UNRELEASED; urgency=low
   * rules.d/build.mk: use rdfind + symlinks instead of fdupes + handcoded
     shell script to optimize disk space.
 
- -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 01 Jun 2013 22:03:20 +0200
 
 eglibc (2.17-3) unstable; urgency=medium
 
