--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-5) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Jun 2013 13:11:11 +0200
+
 eglibc (2.17-4) unstable; urgency=low
 
   [ Adam Conrad ]
