kfreebsd/local-sysdeps.diff: update to revision 4512 (from glibc-bsd).    Closes: #710841.
svn path=/glibc-package/trunk/; revision=5619

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.17-5) UNRELEASED; urgency=low
 
-  * 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4512 (from glibc-bsd).
+    Closes: #710841.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Jun 2013 13:11:11 +0200
 
