--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ eglibc (2.17-5) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision 4512 (from glibc-bsd).
     Closes: #710841.
 
+  [ Adam Conrad ]
+  * powerpc/submitted-accept4.diff: The accept4 syscall wasn't defined on
+    powerpc until 2.6.37, reflect that in definition of __ASSUME_ACCEPT4.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Jun 2013 13:11:11 +0200
 
 eglibc (2.17-4) unstable; urgency=low
