--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ eglibc (2.17-5) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * debian/tests/control: Add a bogus Depends line to the rebuild test.
 
+  [ Aurelien Jarno ]
+  * Build glibc on mips with gcc-4.4 until a recent binutils version is
+    available in sid.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Jun 2013 13:11:11 +0200
 
 eglibc (2.17-4) unstable; urgency=low
