--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-5) UNRELEASED; urgency=low
+eglibc (2.17-5) unstable; urgency=low
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4512 (from glibc-bsd).
@@ -11,7 +11,7 @@ eglibc (2.17-5) UNRELEASED; urgency=low
   * Build glibc on mips with gcc-4.4 until a recent binutils version is
     available in sid.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Jun 2013 13:11:11 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 00:18:31 +0200
 
 eglibc (2.17-4) unstable; urgency=low
 
