--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-6) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 09:46:30 +0200
+
 eglibc (2.17-5) unstable; urgency=low
 
   [ Petr Salinger ]
