* control.in/main, sysdeps/mips.mk, sysdeps/mipsel.mk: build the libc     back with gcc-4.7, but using -mno-plt.
svn path=/glibc-package/trunk/; revision=5627

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.17-6) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno ]
+  * control.in/main, sysdeps/mips.mk, sysdeps/mipsel.mk: build the libc
+    back with gcc-4.7, but using -mno-plt.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 09:46:30 +0200
 
