* hurd-i386/libpthread_ctypes.diff: Fix ctypes initialization. * hurd-i386/submitted-handle-eprototype.diff: Fix DNS lookups.
svn path=/glibc-package/trunk/; revision=5628

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ eglibc (2.17-6) UNRELEASED; urgency=low
   * control.in/main, sysdeps/mips.mk, sysdeps/mipsel.mk: build the libc
     back with gcc-4.7, but using -mno-plt.
 
+  [ Samuel Thibault ]
+  * hurd-i386/libpthread_ctypes.diff: Fix ctypes initialization.
+  * hurd-i386/submitted-handle-eprototype.diff: Fix DNS lookups.
+
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 09:46:30 +0200
 
 eglibc (2.17-5) unstable; urgency=low
