* hurd-i386/tg-io_select_timeout.diff: Fixes select timeout. * hurd-i386/tg-poll_errors_fixes.diff: Fixes poll posixity. * hurd-i386/local-select.diff: Removed, made obsolete by tg-io_select_timeout.diff.
svn path=/glibc-package/trunk/; revision=5629

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ eglibc (2.17-6) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * hurd-i386/libpthread_ctypes.diff: Fix ctypes initialization.
   * hurd-i386/submitted-handle-eprototype.diff: Fix DNS lookups.
+  * hurd-i386/tg-io_select_timeout.diff: Fixes select timeout.
+  * hurd-i386/tg-poll_errors_fixes.diff: Fixes poll posixity.
+  * hurd-i386/local-select.diff: Removed, made obsolete by
+  tg-io_select_timeout.diff.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 09:46:30 +0200
 
