--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ eglibc (2.17-6) UNRELEASED; urgency=low
   * hurd-i386/tg-poll_errors_fixes.diff: Fixes poll posixity.
   * hurd-i386/local-select.diff: Removed, made obsolete by
   tg-io_select_timeout.diff.
+  * hurd-i386/tg-context_functions.diff: Add *context support.
 
  -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Jun 2013 09:46:30 +0200
 
