--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-7) UNRELEASED; urgency=low
+
+  * 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Jun 2013 23:43:16 +0200
+
 eglibc (2.17-6) unstable; urgency=low
 
   [ Aurelien Jarno ]
