--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 eglibc (2.17-7) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * 
+
+  [ Samuel Thibault ]
+  * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Jun 2013 23:43:16 +0200
 
