--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ eglibc (2.17-7) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4552 (from glibc-bsd).
+    Closes: #712196.
+
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Jun 2013 23:43:16 +0200
 
 eglibc (2.17-6) unstable; urgency=low
