--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.17-7) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * debian/rules: unexport LD_PRELOAD to allow the testsuite to pass even
     if eatmydata is used.  Closes: #713035.
+  * debian/script.in/nohwcap.sh: handle new multiarch format of dpkg-query.
+    Closes: #713837.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
