* debian/patches/m68k/cvs-sysdep-cfi.diff: new patch from upstream to fix     cfi assembly code.  Closes: #709992.
svn path=/glibc-package/trunk/; revision=5639

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ eglibc (2.17-7) UNRELEASED; urgency=low
     if eatmydata is used.  Closes: #713035.
   * debian/script.in/nohwcap.sh: handle new multiarch format of dpkg-query.
     Closes: #713837.
+  * debian/patches/m68k/cvs-sysdep-cfi.diff: new patch from upstream to fix
+    cfi assembly code.  Closes: #709992.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
