--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ eglibc (2.17-7) UNRELEASED; urgency=low
     Closes: #713837.
   * debian/patches/m68k/cvs-sysdep-cfi.diff: new patch from upstream to fix
     cfi assembly code.  Closes: #709992.
+  * debian/patches/any/cvs-getaddrinfo-EAI_NONAME.diff: new patch from
+    upstream to return EAI_NONAME instead of EAI_SYSTEM when the network
+    is down.  Closes: #713799.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
