--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ eglibc (2.17-7) UNRELEASED; urgency=low
   * debian/patches/any/cvs-getaddrinfo-EAI_NONAME.diff: new patch from
     upstream to return EAI_NONAME instead of EAI_SYSTEM when the network
     is down.  Closes: #713799.
+  * debian/local/ldconfig_wrap: rename into debian/local/sbin/ldconfig to
+    be consistent with the naming of other files in this directory.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
