--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 eglibc (2.17-7) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
-  * debian/rules: unexport LD_PRELOAD to allow the testsuite to pass even
-    if eatmydata is used.  Closes: #713035.
+  * debian/rules.d/build.mk: unexport LD_PRELOAD to allow the testsuite
+    to pass even if eatmydata is used.  Closes: #713035.
   * debian/script.in/nohwcap.sh: handle new multiarch format of dpkg-query.
     Closes: #713837.
   * debian/patches/m68k/cvs-sysdep-cfi.diff: new patch from upstream to fix
