* debian/patches/mips/local-prlimit64.diff: new patch to temporarily     workaround issues with the prlimit64 syscall on MIPS.
svn path=/glibc-package/trunk/; revision=5644

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ eglibc (2.17-7) UNRELEASED; urgency=low
     is down.  Closes: #713799.
   * debian/local/ldconfig_wrap: rename into debian/local/sbin/ldconfig to
     be consistent with the naming of other files in this directory.
+  * debian/patches/mips/local-prlimit64.diff: new patch to temporarily
+    workaround issues with the prlimit64 syscall on MIPS.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
