--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ eglibc (2.17-7) UNRELEASED; urgency=low
     be consistent with the naming of other files in this directory.
   * debian/patches/mips/local-prlimit64.diff: new patch to temporarily
     workaround issues with the prlimit64 syscall on MIPS.
+  * debian/testsuite-checking/expected-results-mips*: allow a few tests to
+    fail do the prlimit64 syscall issue on MIPS.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
