--- a/debian/changelog
+++ b/debian/changelog
@@ -17,7 +17,7 @@ eglibc (2.17-7) UNRELEASED; urgency=low
   * debian/patches/mips/local-prlimit64.diff: new patch to temporarily
     workaround issues with the prlimit64 syscall on MIPS.
   * debian/testsuite-checking/expected-results-mips*: allow a few tests to
-    fail do the prlimit64 syscall issue on MIPS.
+    fail due to the prlimit64 syscall issue on MIPS.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
