* Add 32-bit biarch packages on sparc64.
svn path=/glibc-package/trunk/; revision=5647

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ eglibc (2.17-7) UNRELEASED; urgency=low
     workaround issues with the prlimit64 syscall on MIPS.
   * debian/testsuite-checking/expected-results-mips*: allow a few tests to
     fail due to the prlimit64 syscall issue on MIPS.
+  * Add 32-bit biarch packages on sparc64.
 
   [ Samuel Thibault ]
   * Remove unapplied hurd-i386/local-nice.diff (applied as tg-nice.diff)
