* debian/rules.d/build.mk: run the testsuite in parallel again.
svn path=/glibc-package/trunk/; revision=5653

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.17-8) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno ]
+  * debian/rules.d/build.mk: run the testsuite in parallel again.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
