--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ eglibc (2.17-8) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * debian/rules.d/build.mk: run the testsuite in parallel again.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
+    process startup on hurd-i386. Fixes root filesystem startup.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
 eglibc (2.17-7) unstable; urgency=medium
