kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=5655

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ eglibc (2.17-8) UNRELEASED; urgency=low
   * patches/hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
     process startup on hurd-i386. Fixes root filesystem startup.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
 eglibc (2.17-7) unstable; urgency=medium
