split some parts of patches/kfreebsd/local-linuxthreads29.diff     into  patches/kfreebsd/local-nscd-no-sockcloexec.diff           patches/kfreebsd/local-linuxthreads-tlsdesc.diff
svn path=/glibc-package/trunk/; revision=5656

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ eglibc (2.17-8) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
+  * split some parts of patches/kfreebsd/local-linuxthreads29.diff
+    into  patches/kfreebsd/local-nscd-no-sockcloexec.diff
+          patches/kfreebsd/local-linuxthreads-tlsdesc.diff
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
