--- a/debian/changelog
+++ b/debian/changelog
@@ -9,9 +9,10 @@ eglibc (2.17-8) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
-  * split some parts of patches/kfreebsd/local-linuxthreads29.diff
-    into  patches/kfreebsd/local-nscd-no-sockcloexec.diff
-          patches/kfreebsd/local-linuxthreads-tlsdesc.diff
+  * split some parts of kfreebsd/local-linuxthreads29.diff
+    into  kfreebsd/local-nscd-no-sockcloexec.diff and
+          kfreebsd/local-linuxthreads-tlsdesc.diff
+  * add kfreebsd/local-fbtl.diff and kfreebsd/local-fbtl-depends.diff
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
