hurd-i386/unsubmitted-tls.diff: rename into tg-tls-threadvar.diff
svn path=/glibc-package/trunk/; revision=5659

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ eglibc (2.17-8) UNRELEASED; urgency=low
   * debian/rules.d/build.mk: run the testsuite in parallel again.
 
   [ Samuel Thibault ]
-  * patches/hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
+  * hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
     process startup on hurd-i386. Fixes root filesystem startup.
+  * hurd-i386/unsubmitted-tls.diff: rename into tg-tls-threadvar.diff
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
