hurd-i386/tg-tls.diff: Move some hooks to tg-tls-threadvar.diff.
svn path=/glibc-package/trunk/; revision=5660

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ eglibc (2.17-8) UNRELEASED; urgency=low
   * hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
     process startup on hurd-i386. Fixes root filesystem startup.
   * hurd-i386/unsubmitted-tls.diff: rename into tg-tls-threadvar.diff
+  * hurd-i386/tg-tls.diff: Move some hooks to tg-tls-threadvar.diff.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 4693 (from glibc-bsd).
