--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,9 @@ eglibc (2.17-8) UNRELEASED; urgency=low
     into  kfreebsd/local-nscd-no-sockcloexec.diff and
           kfreebsd/local-linuxthreads-tlsdesc.diff
   * add kfreebsd/local-fbtl.diff and kfreebsd/local-fbtl-depends.diff
-  * kfreebsd/local-sysdeps.diff: update to revision 4739 (from glibc-bsd).
+  * kfreebsd/local-sysdeps.diff: update to revision 4748 (from glibc-bsd).
+  * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
+    by fbtl tests that are known to fail.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 30 Jun 2013 01:45:35 +0200
 
