--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ eglibc (2.17-51) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
   * switch libpthread implementation on kfreebsd-* to fbtl.
-    Closes: #703545. Closes: #665287. Closes #683825. Closes #489066.
+    Closes: #703545. Closes: #665287. Closes: #683825. Closes: #489066.
   * split some parts of kfreebsd/local-linuxthreads29.diff
     into  kfreebsd/local-nscd-no-sockcloexec.diff and
           kfreebsd/local-linuxthreads-tlsdesc.diff
