--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,8 @@ eglibc (2.17-51) UNRELEASED; urgency=low
     into  kfreebsd/local-nscd-no-sockcloexec.diff and
           kfreebsd/local-linuxthreads-tlsdesc.diff
   * add kfreebsd/local-fbtl.diff and kfreebsd/local-fbtl-depends.diff
-  * kfreebsd/local-sysdeps.diff: update to revision 4775 (from glibc-bsd).
-    Addresses: #717032 in new binutils.
+  * kfreebsd/local-sysdeps.diff: update to revision 4809 (from glibc-bsd).
+    Closes: #718181. Addresses: #717032 in new binutils.
   * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
     by fbtl tests that are known to fail.
 
