symbols file have been prepared by Aurelien
svn path=/glibc-package/trunk/; revision=5674

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ eglibc (2.17-91) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * debian/rules.d/build.mk: run the testsuite in parallel again.
+  * prepare symbols file update for kfreebsd-* switch to fbtl.
 
   [ Samuel Thibault ]
   * hurd-i386/local-no-bootstrap-fs-access.diff: Do not call access at
