debian/control.in/main: Drop build-conflicts on binutils-gold to make us buildable again with the new binutils that provides it.
svn path=/glibc-package/trunk/; revision=5675

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ eglibc (2.17-91) UNRELEASED; urgency=low
   * hurd-i386/unsubmitted-tls.diff: rename into tg-tls-threadvar.diff
   * hurd-i386/tg-tls.diff: Move some hooks to tg-tls-threadvar.diff.
 
+  [ Adam Conrad ]
+  * debian/control.in/main: Drop build-conflicts on binutils-gold to
+    make us buildable again with the new binutils that provides it.
+
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 25 Jul 2013 08:45:35 +0200
 
 eglibc (2.17-7) unstable; urgency=medium
