debian/*: Remove ldd.1, ldconfig.8, ld.so.8, gai.conf.5, zic.8, and zdump.1, and let them move to manpages (Reference: #556173)
svn path=/glibc-package/trunk/; revision=5676

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ eglibc (2.17-91) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * debian/control.in/main: Drop build-conflicts on binutils-gold to
     make us buildable again with the new binutils that provides it.
+  * debian/*: Remove ldd.1, ldconfig.8, ld.so.8, gai.conf.5, zic.8,
+    and zdump.1, and let them move to manpages (Reference: #556173)
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 25 Jul 2013 08:45:35 +0200
 
