--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-91) UNRELEASED; urgency=low
+eglibc (2.17-91) unstable; urgency=low
 
   [ Petr Salinger ]
   * switch libpthread implementation on kfreebsd-* to fbtl.
@@ -28,7 +28,7 @@ eglibc (2.17-91) UNRELEASED; urgency=low
   * debian/*: Remove ldd.1, ldconfig.8, ld.so.8, gai.conf.5, zic.8,
     and zdump.1, and let them move to manpages (Reference: #556173)
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 25 Jul 2013 08:45:35 +0200
+ -- Adam Conrad <adconrad@0c3.net>  Wed, 31 Jul 2013 20:56:32 +0100
 
 eglibc (2.17-7) unstable; urgency=medium
 
