--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-92) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Wed, 31 Jul 2013 22:38:47 +0100
+
 eglibc (2.17-91) unstable; urgency=low
 
   [ Petr Salinger ]
