--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 eglibc (2.17-92) UNRELEASED; urgency=low
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 4839 (from glibc-bsd).
   * 
 
  -- Adam Conrad <adconrad@0c3.net>  Wed, 31 Jul 2013 22:38:47 +0100
