--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-93) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
+
 eglibc (2.17-92) unstable; urgency=low
 
   * kfreebsd/local-sysdeps.diff: update to revision 4839 (from glibc-bsd).
