patches/any/cvs-tst-cancel4-buf.diff: Increase nptl test case buffer size to 16384 so we really block on current (>= 3.10) Linux kernels.
svn path=/glibc-package/trunk/; revision=5684

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.17-93) UNRELEASED; urgency=low
 
-  * 
+  * patches/any/cvs-tst-cancel4-buf.diff: Increase nptl test case buffer
+    size to 16384 so we really block on current (>= 3.10) Linux kernels.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
 
