* patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: New patch from     Richard Braun to work around applications which do not like micro-second     clock_t, such as guile.
svn path=/glibc-package/trunk/; revision=5687

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,13 @@
 eglibc (2.17-93) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * patches/any/cvs-tst-cancel4-buf.diff: Increase nptl test case buffer
     size to 16384 so we really block on current (>= 3.10) Linux kernels.
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: New patch from
+    Richard Braun to work around applications which do not like micro-second
+    clock_t, such as guile.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
 
