--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ eglibc (2.17-93) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: New patch from
     Richard Braun to work around applications which do not like micro-second
     clock_t, such as guile.
+  * Update hurd-i386 testsuite progressions.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
 
