* patches/hurd-i386/submitted-startup-pid2.diff: New patch from Justus     Winter to prepare reboot() for /hurd/init getting PID 2 instead of 1.
svn path=/glibc-package/trunk/; revision=5690

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ eglibc (2.17-93) UNRELEASED; urgency=low
     Richard Braun to work around applications which do not like micro-second
     clock_t, such as guile.
   * Update hurd-i386 testsuite progressions.
+  * patches/hurd-i386/submitted-startup-pid2.diff: New patch from Justus
+    Winter to prepare reboot() for /hurd/init getting PID 2 instead of 1.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
 
