--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ eglibc (2.17-93) UNRELEASED; urgency=low
   * Update hurd-i386 testsuite progressions.
   * patches/hurd-i386/submitted-startup-pid2.diff: New patch from Justus
     Winter to prepare reboot() for /hurd/init getting PID 2 instead of 1.
+  * patches/hurd-i386/submitted-path_mounted.diff: New patch from Justus
+    Winter to fix hurd-i386's _PATH_MOUNTED according to Debian usage.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 01 Aug 2013 23:00:51 +0100
 
