* New upstream release: version 2.18, orig tarball built at SVN r23838:   - patches/alpha/local-string-functions.diff: Rebased.   - patches/alpha/submitted-PTR_MANGLE.diff: Rebased.   - patches/any/local-allocalim-header.diff: Rebased.   - patches/any/local-disable-test-tgmath2.diff: Rebased.   - patches/any/local-dlfptr.diff: Rebased.   - patches/any/local-ld-multiarch.diff: Rebased.   - patches/any/local-ldso-disable-hwcap.diff: Rebased.   - patches/any/local-mktemp.diff: Rebased.   - patches/any/local-nss-overflow.diff: Rebased.   - patches/any/submitted-bits-fcntl_h-at.diff: Rebased.   - patches/any/submitted-longdouble.diff: Rebased.   - patches/arm/local-vfp-sysdeps.diff: Rebased.   - patches/arm/unsubmitted-ldconfig-cache-abi.diff: Rebased.   - patches/hppa/submitted-nptl-carlos.diff: Rebased.   - patches/sparc/local-fork.diff: Rebased.   - patches/ia64/submitted-fpu-ulps.diff: Rebased.   - patches/localedata/first_weekday.diff: Rebased.   - patches/locale/LC_IDENTIFICATION-optional-fields.diff: Rebased.   - patches/powerpcspe/unsubmitted-nearbyint.diff: Applied upstream.   - patches/m68k/cvs-sysdep-cfi.diff: Applied upstream.   - patches/i386/cvs-simd-exception.diff: Applied upstream.   - patches/any/local-rtld.diff: Applied upstream.   - patches/any/cvs-tst-array-as-needed.diff: Applied upstream.   - patches/any/cvs-use-glibc-wchar.diff: Applied upstream.   - patches/any/submitted-setfsid-wur.diff: Applied upstream.   - patches/any/cvs-sys-param-h-DEV_BSIZE.diff: Applied upstream.   - patches/any/cvs-getaddrinfo-stack-overflow.diff: Applied upstream.   - patches/any/cvs-regexp-overrun.diff: Applied upstream.   - patches/any/cvs-gethostbyname-numeric.diff: Applied upstream.   - patches/any/cvs-getaddrinfo-EAI_NONAME.diff: Applied upstream.   - patches/any/cvs-tst-cancel4-buf.diff: Applied upstream. * debian/patches/any/cvs-tst-tls-atexit-deps.diff: Fix compilation of   stdlib/tst-tls-atexit with binutils defaulting to ld --as-needed.
svn path=/glibc-package/

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,42 @@
+eglibc (2.18-0experimental0) UNRELEASED; urgency=low
+
+  * New upstream release: version 2.18, orig tarball built at SVN r23838:
+    - patches/alpha/local-string-functions.diff: Rebased.
+    - patches/alpha/submitted-PTR_MANGLE.diff: Rebased.
+    - patches/any/local-allocalim-header.diff: Rebased.
+    - patches/any/local-disable-test-tgmath2.diff: Rebased.
+    - patches/any/local-dlfptr.diff: Rebased.
+    - patches/any/local-ld-multiarch.diff: Rebased.
+    - patches/any/local-ldso-disable-hwcap.diff: Rebased.
+    - patches/any/local-mktemp.diff: Rebased.
+    - patches/any/local-nss-overflow.diff: Rebased.
+    - patches/any/submitted-bits-fcntl_h-at.diff: Rebased.
+    - patches/any/submitted-longdouble.diff: Rebased.
+    - patches/arm/local-vfp-sysdeps.diff: Rebased.
+    - patches/arm/unsubmitted-ldconfig-cache-abi.diff: Rebased.
+    - patches/hppa/submitted-nptl-carlos.diff: Rebased.
+    - patches/sparc/local-fork.diff: Rebased.
+    - patches/ia64/submitted-fpu-ulps.diff: Rebased.
+    - patches/localedata/first_weekday.diff: Rebased.
+    - patches/locale/LC_IDENTIFICATION-optional-fields.diff: Rebased.
+    - patches/powerpcspe/unsubmitted-nearbyint.diff: Applied upstream.
+    - patches/m68k/cvs-sysdep-cfi.diff: Applied upstream.
+    - patches/i386/cvs-simd-exception.diff: Applied upstream.
+    - patches/any/local-rtld.diff: Applied upstream.
+    - patches/any/cvs-tst-array-as-needed.diff: Applied upstream.
+    - patches/any/cvs-use-glibc-wchar.diff: Applied upstream.
+    - patches/any/submitted-setfsid-wur.diff: Applied upstream.
+    - patches/any/cvs-sys-param-h-DEV_BSIZE.diff: Applied upstream.
+    - patches/any/cvs-getaddrinfo-stack-overflow.diff: Applied upstream.
+    - patches/any/cvs-regexp-overrun.diff: Applied upstream.
+    - patches/any/cvs-gethostbyname-numeric.diff: Applied upstream.
+    - patches/any/cvs-getaddrinfo-EAI_NONAME.diff: Applied upstream.
+    - patches/any/cvs-tst-cancel4-buf.diff: Applied upstream.
+  * debian/patches/any/cvs-tst-tls-atexit-deps.diff: Fix compilation of
+    stdlib/tst-tls-atexit with binutils defaulting to ld --as-needed.
+
+ -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
+
 eglibc (2.17-93) UNRELEASED; urgency=low
 
   [ Adam Conrad ]
