* patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.   * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Rebased.   * patches/hurd-i386/submitted-add-needed.diff: Rebased.   * patches/hurd-i386/submitted-exec_filename.diff: Rebased.   * patches/hurd-i386/tg-EIEIO-fr.diff: Rebased.   * patches/hurd-i386/tg-elfosabi_gnu.diff: Rebased.   * patches/hurd-i386/tg-exec-static.diff: Rebased.   * patches/hurd-i386/tg-hurdsig-fixes.diff: Rebased.   * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebased.   * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff: Rebased.   * patches/hurd-i386/tg-tls-threadvar.diff: Rebased.   * patches/hurd-i386/tg-tls.diff: Rebased.   * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: Rebased.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5711

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 eglibc (2.18-0experimental0) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * New upstream release: version 2.18, orig tarball built at SVN r23838:
     - patches/alpha/local-string-functions.diff: Rebased.
     - patches/alpha/submitted-PTR_MANGLE.diff: Rebased.
@@ -34,6 +35,21 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - patches/any/cvs-tst-cancel4-buf.diff: Applied upstream.
   * debian/patches/any/cvs-tst-tls-atexit-deps.diff: Fix compilation of
     stdlib/tst-tls-atexit with binutils defaulting to ld --as-needed.
+
+  [ Samuel Thibault ]
+  * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
+  * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Rebased.
+  * patches/hurd-i386/submitted-add-needed.diff: Rebased.
+  * patches/hurd-i386/submitted-exec_filename.diff: Rebased.
+  * patches/hurd-i386/tg-EIEIO-fr.diff: Rebased.
+  * patches/hurd-i386/tg-elfosabi_gnu.diff: Rebased.
+  * patches/hurd-i386/tg-exec-static.diff: Rebased.
+  * patches/hurd-i386/tg-hurdsig-fixes.diff: Rebased.
+  * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebased.
+  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff: Rebased.
+  * patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
+  * patches/hurd-i386/tg-tls.diff: Rebased.
+  * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: Rebased.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
