--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
   * patches/hurd-i386/tg-tls.diff: Rebased.
   * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: Rebased.
+  * patches/hurd-i386/submitted-net.diff: Rebased.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
