* patches/hurd-i386/local-ulimit.diff: Removed, fixed upstream.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5715

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-tls.diff: Rebased.
   * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: Rebased.
   * patches/hurd-i386/submitted-net.diff: Rebased.
+  * patches/hurd-i386/local-ulimit.diff: Removed, fixed upstream.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
