* patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Add missing     version.   * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Likewise.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5716

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-clock_t_centiseconds.diff: Rebased.
   * patches/hurd-i386/submitted-net.diff: Rebased.
   * patches/hurd-i386/local-ulimit.diff: Removed, fixed upstream.
+  * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Add missing
+    version.
+  * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Likewise.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
