* patches/hurd-i386/unsubmitted-stack_offset.diff: New patch, fixes     __hurd_threadvar_stack_offset conflict link failure.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5718

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,8 +55,10 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Add missing
     version.
   * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Likewise.
-  * patches/any/multi_arch.diff: New patch, fixes undefined reference failure
-    with non-multiarch builds.
+  * patches/any/unsubmitted-multi_arch.diff: New patch, fixes undefined
+    reference failure with non-multiarch builds.
+  * patches/hurd-i386/unsubmitted-stack_offset.diff: New patch, fixes
+    __hurd_threadvar_stack_offset conflict link failure.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
