--- a/debian/changelog
+++ b/debian/changelog
@@ -55,8 +55,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Add missing
     version.
   * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Likewise.
-  * patches/any/unsubmitted-multi_arch.diff: New patch, fixes undefined
-    reference failure with non-multiarch builds.
+  * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: New patch, fixes undefined
+    __GI_memmove/memset reference failures.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
