--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/libpthread_hurd_cond_wait.diff: Likewise.
   * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: New patch, fixes undefined
     __GI_memmove/memset reference failures.
+  * testsuite-checking/expected-results-i486-gnu-libc,
+    expected-results-i686-gnu-i386: Update testsuite result.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
