--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,11 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * testsuite-checking/expected-results-i486-gnu-libc,
     expected-results-i686-gnu-i386: Update testsuite result.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision xxxx (from glibc-bsd).
+  * kfreebsd/local-fbtl.diff: likewise
+  * update symbols file for kfreebsd
+
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
 eglibc (2.17-93) UNRELEASED; urgency=low
