--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision xxxx (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
   * update symbols file for kfreebsd
+  * add kfreebsd/submitted-waitid.diff
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
