--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * kfreebsd/local-fbtl.diff: likewise
   * update symbols file for kfreebsd
   * add kfreebsd/submitted-waitid.diff
+  * add kfreebsd/submitted-auxv.diff. Closes: #717912.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
