drop obsolete patches/*/local-linuxthreads*
svn path=/glibc-package/branches/eglibc-2.18/; revision=5726

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * update symbols file for kfreebsd
   * add kfreebsd/submitted-waitid.diff
   * add kfreebsd/submitted-auxv.diff. Closes: #717912.
+  * drop obsolete patches/*/local-linuxthreads*
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
