drop obsolete kfreebsd/local-dosavesse.diff kfreebsd/local-nosavesse.diff
svn path=/glibc-package/branches/eglibc-2.18/; revision=5727

--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * add kfreebsd/submitted-waitid.diff
   * add kfreebsd/submitted-auxv.diff. Closes: #717912.
   * drop obsolete patches/*/local-linuxthreads*
+  * drop obsolete kfreebsd/local-dosavesse.diff kfreebsd/local-nosavesse.diff
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
