--- a/debian/changelog
+++ b/debian/changelog
@@ -67,8 +67,13 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * add kfreebsd/submitted-waitid.diff
   * add kfreebsd/submitted-auxv.diff. Closes: #717912.
   * drop obsolete patches/*/local-linuxthreads*
-  * drop obsolete kfreebsd/local-dosavesse.diff kfreebsd/local-nosavesse.diff
-
+  * drop obsolete linuxthreads part of kfreebsd/local-scripts.diff
+  * drop obsolete kfreebsd/local-dosavesse.diff,
+		  kfreebsd/local-nosavesse.diff,
+		  kfreebsd/local-use-thr-primitives.diff,
+ 		  kfreebsd/submitted-libc_once.diff,
+		  local-pthread_at_fork.diff
+	
  -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
 
 eglibc (2.17-93) UNRELEASED; urgency=low
