--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision xxxx (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
   * update symbols file for kfreebsd
+  * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
   * add kfreebsd/submitted-waitid.diff
   * add kfreebsd/submitted-auxv.diff. Closes: #717912.
   * drop obsolete patches/*/local-linuxthreads*
