* testsuite-checking/expected-results-i486-gnu-libc,     expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,     expected-results-i686-gnu-xen: Update testsuite result.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5733

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,7 +58,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: New patch, fixes undefined
     __GI_memmove/memset reference failures.
   * testsuite-checking/expected-results-i486-gnu-libc,
-    expected-results-i686-gnu-i386: Update testsuite result.
+    expected-results-i686-gnu-i386, expected-results-i686-gnu-i686,
+    expected-results-i686-gnu-xen: Update testsuite result.
 
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 5050 (from glibc-bsd).
