kfreebsd - sync with 2.18; use wait6 for waitid
svn path=/glibc-package/branches/eglibc-2.18/; revision=5754

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,11 +62,11 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     expected-results-i686-gnu-xen: Update testsuite result.
 
   [ Petr Salinger ]
-  * kfreebsd/local-sysdeps.diff: update to revision 5129 (from glibc-bsd).
+  * kfreebsd/local-sysdeps.diff: update to revision 5135 (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
   * update symbols file for kfreebsd
   * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
-  * add kfreebsd/submitted-waitid.diff
+  * add kfreebsd/submitted-waitid.diff. Closes: #720188.
   * add kfreebsd/submitted-auxv.diff. Closes: #717912.
   * drop obsolete patches/*/local-linuxthreads*
   * drop obsolete linuxthreads part of kfreebsd/local-scripts.diff
