debian/control: Build-dep on netbase for service lookups in tests.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5755

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - patches/any/cvs-tst-cancel4-buf.diff: Applied upstream.
   * debian/patches/any/cvs-tst-tls-atexit-deps.diff: Fix compilation of
     stdlib/tst-tls-atexit with binutils defaulting to ld --as-needed.
+  * debian/control: Build-dep on netbase for service lookups in tests.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
