sysdeps/kfreebsd.mk: pt_chown is mandatory
svn path=/glibc-package/branches/eglibc-2.18/; revision=5756

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * kfreebsd/local-sysdeps.diff: update to revision 5135 (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
+  * sysdeps/kfreebsd.mk: pt_chown is mandatory
   * update symbols file for kfreebsd
   * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
   * add kfreebsd/submitted-waitid.diff. Closes: #720188.
