rules.d/build.mk: do not explicitely install symlink in rtlddir
svn path=/glibc-package/branches/eglibc-2.18/; revision=5757

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     expected-results-i686-gnu-xen: Update testsuite result.
 
   [ Petr Salinger ]
+  * rules.d/build.mk: do not explicitely install symlink in rtlddir
   * kfreebsd/local-sysdeps.diff: update to revision 5135 (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
   * sysdeps/kfreebsd.mk: pt_chown is mandatory
