--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     expected-results-i686-gnu-xen: Update testsuite result.
 
   [ Petr Salinger ]
+  * debian/*: change version occurences from 2.17 to 2.18 for upgrades/deps.
   * rules.d/build.mk: do not explicitely install symlink in rtlddir
   * kfreebsd/local-sysdeps.diff: update to revision 5135 (from glibc-bsd).
   * kfreebsd/local-fbtl.diff: likewise
@@ -79,7 +80,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
  		  kfreebsd/submitted-libc_once.diff,
 		  local-pthread_at_fork.diff
 	
- -- Adam Conrad <adconrad@ubuntu.com>  Sun, 25 Aug 2013 14:59:44 -0600
+ -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
 eglibc (2.17-93) UNRELEASED; urgency=low
 
