debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5779

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/testsuite-checking/*: Allow powerpc to fail test-{double,float}.
   * debian/patches/any/local-rtlddir-cross.diff: Revert to the state found
     in 2.17 where ld.so was installed to slibdir and so listed in libc.so.
+  * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
