* Skeleton in packaging support for the new powerpc64le-linux-gnu:   - debian/sysdeps/ppc64el.mk: Define base ppc64el libc targets.   - debian/rules.d/control.mk: Add ppc64el to the list of libc_arches.   - debian/control.in/main: Build-depend on gcc-4.8 for ppc64el builds.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5780

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,10 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/testsuite-checking/*: Allow powerpc to fail test-{double,float}.
   * debian/patches/any/local-rtlddir-cross.diff: Revert to the state found
     in 2.17 where ld.so was installed to slibdir and so listed in libc.so.
+  * Skeleton in packaging support for the new powerpc64le-linux-gnu:
+    - debian/sysdeps/ppc64el.mk: Define base ppc64el libc targets.
+    - debian/rules.d/control.mk: Add ppc64el to the list of libc_arches.
+    - debian/control.in/main: Build-depend on gcc-4.8 for ppc64el builds.
   * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
 
   [ Samuel Thibault ]
