debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5781

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - debian/rules.d/control.mk: Add ppc64el to the list of libc_arches.
     - debian/control.in/main: Build-depend on gcc-4.8 for ppc64el builds.
   * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
+  * debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
