--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - debian/control.in/main: Build-depend on gcc-4.8 for ppc64el builds.
   * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
   * debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
+  * debian/sysdeps/*: Enable new IFUNC support on armel and armhf builds.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
