debian/patches/any/cvs-tst-cleanup2-ret.diff: Fix return regression on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5784

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
   * debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
   * debian/sysdeps/*: Enable new IFUNC support on armel and armhf builds.
+  * debian/patches/any/cvs-tst-cleanup2-ret.diff: Fix return regression
+    on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
