--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/sysdeps/*: Enable new IFUNC support on armel and armhf builds.
   * debian/patches/any/cvs-tst-cleanup2-ret.diff: Fix return regression
     on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
+  * debian/patches/any/unsubmitted-tst-tlsmod-as-needed.diff: Fix linking
+    tst-tlsmod5.so and tst-tlsmod6.so with an as-needed default toolchain.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
