* debian/testsuite-checking/expected-results-aarch64-linux-gnu-libc: New. * debian/testsuite-checking/expected-results-arm-linux-gnueabi-armel: New. * debian/testsuite-checking/expected-results-i686-linux-gnu-libc: New.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5787

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/patches/powerpc/unsubmitted-tst-auxv.diff: Fix regression in the
     tst-setcontext-fpscr.c test introduced by kfreebsd/submitted-auxv.diff.
   * debian/testsuite-checking/*: Allow powerpc to fail test-{double,float}.
+  * debian/testsuite-checking/expected-results-aarch64-linux-gnu-libc: New.
+  * debian/testsuite-checking/expected-results-arm-linux-gnueabi-armel: New.
+  * debian/testsuite-checking/expected-results-i686-linux-gnu-libc: New. 
   * debian/patches/any/local-rtlddir-cross.diff: Revert to the state found
     in 2.17 where ld.so was installed to slibdir and so listed in libc.so.
   * Skeleton in packaging support for the new powerpc64le-linux-gnu:
