debian/patches/any/local-use-glibc-predef.diff: Backport stdc-predef.h from glibc instead of eglibc, avoiding bits/predefs.h (closes: #717557)
svn path=/glibc-package/branches/eglibc-2.18/; revision=5788

--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
   * debian/patches/any/unsubmitted-tst-tlsmod-as-needed.diff: Fix linking
     tst-tlsmod5.so and tst-tlsmod6.so with an as-needed default toolchain.
+  * debian/patches/any/local-use-glibc-predef.diff: Backport stdc-predef.h
+    from glibc instead of eglibc, avoiding bits/predefs.h (closes: #717557)
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
