debian/rules.d/quilt.mk: Fix unpatch with only one arch patch applied.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5789

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     tst-tlsmod5.so and tst-tlsmod6.so with an as-needed default toolchain.
   * debian/patches/any/local-use-glibc-predef.diff: Backport stdc-predef.h
     from glibc instead of eglibc, avoiding bits/predefs.h (closes: #717557)
+  * debian/rules.d/quilt.mk: Fix unpatch with only one arch patch applied.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
