--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/libc6.symbols.ppc64: Add missing libc6 symbols file for ppc64.
   * debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
   * debian/sysdeps/*: Enable new IFUNC support on armel and armhf builds.
+  * debian/patches/arm/cvs-ifunc-hwcap-fix.diff: Fix IFUNC on non-NEON.
   * debian/patches/any/cvs-tst-cleanup2-ret.diff: Fix return regression
     on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
   * debian/patches/any/unsubmitted-tst-tlsmod-as-needed.diff: Fix linking
