debian/patches/arm/cvs-arm-pointer-mangling.diff: Add ARM support for pointer encryption in glibc internal structures in C and assembler.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5797

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/libc6.symbols.arm64: Add missing libc6 symbols file for arm64.
   * debian/sysdeps/*: Enable new IFUNC support on armel and armhf builds.
   * debian/patches/arm/cvs-ifunc-hwcap-fix.diff: Fix IFUNC on non-NEON.
+  * debian/patches/arm/cvs-arm-pointer-mangling.diff: Add ARM support for
+    pointer encryption in glibc internal structures in C and assembler.
   * debian/patches/any/cvs-tst-cleanup2-ret.diff: Fix return regression
     on recent versions of gcc in nptl/tst-cleanup2 and nptl/tst-cleanupx2.
   * debian/patches/any/unsubmitted-tst-tlsmod-as-needed.diff: Fix linking
