debian/patches/arm64/cvs-arm64-sigcontext.diff: arm64 sigcontextinfo.h.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5798

--- a/debian/changelog
+++ b/debian/changelog
@@ -77,6 +77,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/patches/any/local-use-glibc-predef.diff: Backport stdc-predef.h
     from glibc instead of eglibc, avoiding bits/predefs.h (closes: #717557)
   * debian/rules.d/quilt.mk: Fix unpatch with only one arch patch applied.
+  * debian/patches/arm64/cvs-arm64-sigcontext.diff: arm64 sigcontextinfo.h.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
