debian/patches/arm64/cvs-arm64-relocs.diff: Add arm64 reloc definitions.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5799

--- a/debian/changelog
+++ b/debian/changelog
@@ -78,6 +78,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     from glibc instead of eglibc, avoiding bits/predefs.h (closes: #717557)
   * debian/rules.d/quilt.mk: Fix unpatch with only one arch patch applied.
   * debian/patches/arm64/cvs-arm64-sigcontext.diff: arm64 sigcontextinfo.h.
+  * debian/patches/arm64/cvs-arm64-relocs.diff: Add arm64 reloc definitions.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
