debian/patches/arm64/cvs-arm64-ifunc.diff: Enable arm64 IFUNC support.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5801

--- a/debian/changelog
+++ b/debian/changelog
@@ -80,6 +80,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/patches/arm64/cvs-arm64-sigcontext.diff: arm64 sigcontextinfo.h.
   * debian/patches/arm64/cvs-arm64-relocs.diff: Add arm64 reloc definitions.
   * debian/patches/arm64/cvs-arm64-mcount-profiling.diff: mcount profiling.
+  * debian/patches/arm64/cvs-arm64-ifunc.diff: Enable arm64 IFUNC support.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
