--- a/debian/changelog
+++ b/debian/changelog
@@ -123,6 +123,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     and kfreebsd/submitted-libc_once.diff.
   * drop kfreebsd/local-readdir_r.diff, obsoleted by fix for CVE-2013-4237.
 
+  [ Aurelien Jarno ]
+  * Drop s390 support.
+
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
 eglibc (2.17-96) unstable; urgency=low
