--- a/debian/changelog
+++ b/debian/changelog
@@ -125,6 +125,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Drop s390 support.
+  * sysdeps/{hurd,kfreebsd,linux}.mk: remove dead code.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
