--- a/debian/changelog
+++ b/debian/changelog
@@ -126,6 +126,15 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Drop s390 support.
   * sysdeps/{hurd,kfreebsd,linux}.mk: remove dead code.
+  * Remove linuxthreads from the tarball:
+    - rules.d/tarball.mk: don't fetech linuxthreads and linuxthreads_db.
+    - rules.d/build.mk: don't build linuxthreads manpages.
+    - rules: don't run make clean in linuxthreads directory.
+    - patches/any/local-sysctl.diff: drop the linuxthreads part.
+    - patches/all/local-pthread-manpages.diff: remove.
+    - local/manpages/pthread_*.3: import the few remaining linuxthreads
+      manpages.
+    - debhelper.in/glibc-doc.manpages: update manpage locations.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
