debian/sysdeps/s390.mk: Enable new IFUNC support.
svn path=/glibc-package/branches/eglibc-2.18/; revision=5805

--- a/debian/changelog
+++ b/debian/changelog
@@ -135,6 +135,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - local/manpages/pthread_*.3: import the few remaining linuxthreads
       manpages.
     - debhelper.in/glibc-doc.manpages: update manpage locations.
+  * debian/sysdeps/s390.mk: Enable new IFUNC support.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
