--- a/debian/changelog
+++ b/debian/changelog
@@ -136,6 +136,7 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
       manpages.
     - debhelper.in/glibc-doc.manpages: update manpage locations.
   * debian/sysdeps/s390.mk: Enable new IFUNC support.
+  * debian/rules.d/debhelper.mk: compress locales-all with xz -z7.
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
