--- a/debian/changelog
+++ b/debian/changelog
@@ -137,6 +137,9 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
     - debhelper.in/glibc-doc.manpages: update manpage locations.
   * debian/sysdeps/s390.mk: Enable new IFUNC support.
   * debian/rules.d/debhelper.mk: compress locales-all with xz -z7.
+  * patches/any/cvs-strcasecmp-locales.diff: new patch from upstream to
+    fix mismatch between strcasecmp and toupper/tolower in tr_TR.iso88599
+    locale (Closes: #716775).
 
  -- Adam Conrad <adconrad@ubuntu.com>  Sat, 09 Nov 2013 12:48:20 +0100
 
