--- a/debian/changelog
+++ b/debian/changelog
@@ -79,6 +79,8 @@ eglibc (2.18-0experimental0) UNRELEASED; urgency=low
   * debian/patches/arm64/cvs-arm64-relocs.diff: Add arm64 reloc definitions.
   * debian/patches/arm64/cvs-arm64-mcount-profiling.diff: mcount profiling.
   * debian/patches/arm64/cvs-arm64-ifunc.diff: Enable arm64 IFUNC support.
+  * debian/{control.in/main,rules,sysdeps/*}: Switch to using gcc-4.8 on all
+    architectures as gcc-4.6 and gcc-4.7 are going away in the near future.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: Rebased.
